=========
Changelog
=========

1.0b14 (unreleased)
===================

- Nothing changed yet.


1.0b13 (2013-11-19)
===================

- Introduce a plugin mechanism: if a local ``requirements.txt`` file is
  present, install its contents into the ``.batou`` virtualenv.

- Load components in alphabetical order. This enables importing from other
  components (when naming the directories appropriately).

- #12986: Only try to unbundle if there actually are changes to unbundle.

- Raise an error if a cron job is configured without a timing value.

- Add platform support for Debian (crontab, logrotate, supervisor).

- Added some documentation.


1.0b12 (2013-11-04)
===================

- Added ``branch`` argument to ``mercurial.Clone``. Setting a branch
  automatically updates to the branch head on deploy. This is mostly useful for
  development environments.

- Create the 'secrets' directory if it doesn't exist, yet. Also, disallow
  editing secret files for non-existing environments.

- Support continuing remote bootstrapping if we failed after creating the
  initial remote directory but were unable to use Mercurial.

- #12898: build.Configure component was broken when using the default
  prefix.


1.0b11 (2013-10-17)
===================

- #12897: Use non-SSL pypi mirror for downloading virtualenv to fix tests
  failing randomly on machines that (for some reason) can't validate PyPI's
  certificate.

- #12911: Ensure that we can configure file owners when they don't
  exist during configure phase yet.

- #12912: Fix untested and broken file ownership management.

- #12847: Clean up unicode handling for File and Content components and
  templating.

- #12910: Remote deployments failed when using bundles for transfers if no
  changes needed bundling.

- #12766: Allow bootstrapping a batou project in an existing directory to
  support migration from 0.2.

- #12283: Recognize files as 'is_template' by default. Auto-detect source files